[package]
name = "humm"
version = "0.1.0"
authors = ["@kii"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ergo-lib = { version = "0.20.0" }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
ergo-lib = { version = "0.20.0", features = ["arbitrary"]}